# libtransport-socket

./: CMakeLists.txt  README.md  atom.mk
include/transport-socket/: tskt.h  tskt_ops.h  tskt_resolv.h  tskt_resolv_ops.h
src/: tskt.c  tskt_impl.c  tskt_pomp.c  tskt_resolv.c  tskt_resolv_impl.c
tests/: tskt_resolv_test.c  tskt_tcp_client.c  tskt_tcp_server.c  tskt_test.c
